# nanobind_example

./: CMakeLists.txt  pyproject.toml
src/: nanobind_example_ext.cpp
src/nanobind_example/: __init__.py  nanobind_example_ext.cpp  pybind11_example_ext.cpp
tests/: test_basic.py
